--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -259,7 +259,7 @@ button
          -o-transition: opacity 1s ease;
             transition: opacity 1s ease;
 
-    background: url(/assets/img/background.JPG);
+    background: url("/assets/img/background.JPG");
     background-repeat: no-repeat;
     background-size: cover;
 }
