--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -259,7 +259,7 @@ button
          -o-transition: opacity 1s ease;
             transition: opacity 1s ease;
 
-    background: url("/assets/img/background.JPG");
+    background: url("https://images.unsplash.com/photo-1597655601841-214a4cfe8b2c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1589&q=80");
     background-repeat: no-repeat;
     background-size: cover;
 }
