--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,44 @@
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
 body { padding: 0; margin: 0; font-family: 'Open Sans', sans-serif; color: rgba(0, 0, 0, 0.463);}
+
 a {text-decoration: none; color: none;}
 
+.overlay-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('./public/images/mountains.jpeg');
+    background-size: cover;
+    background-position: center;
+    opacity: 0.2; 
+    z-index: 1;
+    background-attachment: fixed; 
+}
+
+.page-content {
+    position: relative;
+    z-index: 2;
+    padding: 20px;
+
+}
+
+
 #name {
-font-weight: 300;
+font-weight: 150;
 font-size: 7rem;
 color: rgba(0, 0, 0, 0.463);
 text-align: center;
